[package]
name = "daggy"
version = "0.3.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A directed acyclic graph data structure library. It is Implemented on top of petgraph's Graph data structure and attempts to follow similar conventions where suitable."
readme = "README.md"
keywords = ["dag", "directed", "acyclic", "graph", "data-structure"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mitchmindtree/daggy.git"
homepage = "https://github.com/mitchmindtree/daggy"

[dependencies]
petgraph = "0.2.2"
